<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvLabelFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@+id/ivPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name"
            app:layout_constraintStart_toStartOf="@+id/tvLabelFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelFirstName" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:contentDescription="@string/photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/tvLabelPersonalPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/tvLabelLastName"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelLastName" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

        <TextView
            android:id="@+id/tvLabelPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/position"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLine" />

        <TextView
            android:id="@+id/tvLabelWorkPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:text="@string/work_phone_number"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvLabelPosition"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelPosition" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvLabelLastName"
            app:layout_constraintTop_toTopOf="@+id/tvLabelFirstName"
            tools:text="Константинополь" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintTop_toTopOf="@+id/tvLabelLastName"
            tools:text="Яковлев" />

        <TextView
            android:id="@+id/tvPersonalPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tvLastName"
            app:layout_constraintTop_toTopOf="@+id/tvLabelPersonalPhone"
            tools:text="+7 920 123 76 54" />

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/tvLabelPosition"
            app:layout_constraintTop_toTopOf="@+id/tvLabelPosition"
            tools:text="Безработный =)" />

        <TextView
            android:id="@+id/tvWorkPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/tvLabelWorkPhone"
            app:layout_constraintTop_toTopOf="@+id/tvLabelWorkPhone"
            tools:text="6574" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
